Navbar and landing page added

--- a/index.html
+++ b/index.html
@@ -8,48 +8,44 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>My Modern Website</h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <h2>TK Webbyrå</h2>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
+    <!-- Landing Page -->
     <main>
-        <section id="home" class="hero">
-            <div class="container">
-                <h2>Welcome to My Modern Website</h2>
-                <p>This is the home section where you can introduce your website.</p>
+        <!-- Container -->
+        <div class="container">
+            <!-- Text -->
+            <div class="half-section">
+                <div class="half-section-inner-div">
+                    <h1 style="color:white;">Webbyrå I Tullange</h1>
+                    <p class="small-text">
+                        Fullservice webbyrå i Stockholm med spetskompetens inom WordPress, paid social och SEO. 
+                        Vi hjälper er att skapa nya affärer genom affärsdrivande webbplatser och digital synlighet.
+                    </p>
+                </div>
             </div>
-        </section>
 
-        <section id="about" class="about">
-            <div class="container">
-                <h2>About Us</h2>
-                <p>This is the about section. Provide information about yourself or your company.</p>
+            <!-- Image -->
+            <div class="half-section">
+                <img id="background-image" src="./images/landing.jpg" alt="background image computer">
             </div>
-        </section>
-
-        <section id="services" class="services">
-            <div class="container">
-                <h2>Our Services</h2>
-                <p>This is the services section. Describe the services you offer.</p>
-            </div>
-        </section>
-
-        <section id="contact" class="contact">
-            <div class="container">
-                <h2>Contact Us</h2>
-                <p>This is the contact section. Provide your contact information or a contact form.</p>
-            </div>
-        </section>
+        </div>
+     
     </main>
 
     <footer>
-        <div class="container
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
