--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <img id="logo" src="./images/logo.png" alt="logo">
+            <img id="logo" src="./images/logo2.png" alt="logo">
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#services">Projects</a></li>
@@ -60,7 +60,7 @@
             <div class="half-section">
                 <div class="half-section-inner-div">
                     <!-- H1 - Main Header -->
-                    <h2>Webbyrå I Tullange</h2>
+                    <h2>Våra Tjänster</h2>
                     <!-- Secondary Text - Description  -->
                     <p class="small-text black-text">
                         Vi erbjuder allt från nyskapande hemsidor eller uppdatering av eran befintliga hemsida till effektiv marknadsföring och sökmotoroptimering. 
@@ -90,7 +90,7 @@
                 <div class="services-container">
                     <img src="./images/icons/seoIcon.png" alt="seo icon">
                     <div>
-                        <h3>SEO - Optimering</h3>
+                        <h3>Sökmotorsoptimering</h3>
                         <p>Vi sökmotorsoptimerar eran hemsida efter den moderna standarden, vi höjer eran rankning på anpassade nyckelord efter erat behov.</p>
                     </div>
                 </div>
