--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <img id="logo" src="./images/logo.png" alt="logo">
+        <p>&copy; CrispDesigns | All rights reserved.</p>
+        <p>Kontakta oss | info@CrispDesigns | org nr</p>
     </footer>
 
     <script src="script.js"></script>
