--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 
     <footer>
         <img id="logo" src="./images/logo.png" alt="logo">
-        <p>&copy; CrispDesigns | All rights reserved.</p>
-        <p>Kontakta oss | info@CrispDesigns | org nr</p>
+        <p>&copy; CrispDesigns 2024. All rights reserved.</p>
+        <p><a href="#home">Hem</a> | <a href="#contact">Kontakta oss</a> | <a href="#portfolio">Portfolio</a></p>
     </footer>
 
     <script src="script.js"></script>
