Update Services & Contact

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <header>
         <nav>
-            <img id="logo" src="./images/logo2.png" alt="logo">
+            <img id="logo" src="./images/logo3.png" alt="logo">
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#services">Projects</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#home">Hem</a></li>
+                <li><a href="#services">Tjänster</a></li>
+                <li><a href="#services">Projekt</a></li>
+                <li><a href="#about">Om Oss</a></li>
+                <li><a href="#contact">Kontakt</a></li>
             </ul>
         </nav>
     </header>
@@ -98,10 +99,44 @@
                 <div class="services-container">
                     <img src="./images/icons/analyticsIcon.png" alt="seo icon">
                     <div>
-                        <h3>Analysverktyg som Google Analytics & Google Tag Manager</h3>
+                        <h3>Analysverktyg - Google Analytics 4 & Google Tag Manager</h3>
                         <p>Vi lägger till analysverktyg som Google Analytics 4 och Google Tag Manager, vi kan även lägga in anpassade konverteringar efter erat behov.</p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="projects">
+
+    </section>
+
+    <section id="contact">
+        <div class="container">
+            <div class="half-section">
+                <div class="contact-form-container">
+                    <form class="contact-form">
+                        <h2>Kontakta Oss</h2>
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" name="name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea id="message" name="message" rows="5" required></textarea>
+                        </div>
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
+            </div>
+    
+            <!-- Services section / what we have to offer -->
+            <div class="half-section">
+               
             </div>
         </div>
     </section>
