--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="half-section">
                 <div class="half-section-inner-div">
                     <!-- H1 - Main Header -->
-                    <h1 style="color:white;">Webbyrå I Tullange</h1>
+                    <h1>Webbyrå I Tullange</h1>
                     <!-- Secondary Text - Description  -->
                     <p class="small-text">
                         Fullservice webbyrå i Stockholm med spetskompetens inom WordPress, paid social och SEO. 
@@ -56,7 +56,7 @@
         </div>
     </main>
 
-    <section id="about">
+    <section id="services">
         <div class="container">
             <div class="half-section">
                 <div class="half-section-inner-div">
