--- a/index.html
+++ b/index.html
@@ -20,8 +20,43 @@
     </header>
 
     <!-- Landing Page -->
+<!--     <main id="home">
+        <div class="video-background">
+            <video id="background-video" autoplay loop muted>
+                <source src="cleaning1920x1080.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <div class="blurred-background"></div>
+        </div>
+
+        <div class="centered-text-container">
+            <h1>FLYTTSTÄDNING I STOCKHOLM</h1>
+            <div class="button-container">
+                <a class="discount-button">TA DEL AV DAGENS KAMPANJ <img class="btn-arrow" src="./images/arrow.png" alt="right arrow"></a>
+            </div>
+        </div>
+    </main>
+
+    <section id="services">
+        <div class="test-container">
+           <img src="./images/">
+        </div>
+    </section> -->
+    <!-- END -->
+
+
+    <!-- Landing Page 2-->
     <main id="home">
-        <!-- Container -->
+        <div class="big-width-section">
+            <p style="margin-left:7%;" class="big-paragraph">BOKA FLYTTSTÄD IDAG!</p>
+            <h1 style="margin-left:10%;">GRATIS FÖNSTERPUTS. + HELA 15% RABATT PÅ FLYTTSTÄDNINGEN</h1>
+            <p style="margin-left:50%;" class="small-paragraph">Om du även bokar flytthjälp</p>
+            <div class="button-container">
+                <a style="margin-left:32%;" class=" discount-button">TA DEL AV DAGENS KAMPANJ <img class="btn-arrow" src="./images/arrow.png" alt="right arrow"></a>
+            </div>
+        </div>        
+
+        <div class="small-width-section">
             <div class="video-background">
                 <video id="background-video" autoplay loop muted>
                     <source src="cleaning1920x1080.mp4" type="video/mp4">
@@ -29,24 +64,55 @@
                 </video>
                 <div class="blurred-background"></div>
             </div>
-
-            <div class="centered-text-container">
-                <h1>FLYTTSTÄDNING I STOCKHOLM</h1>
-                <div class="button-container">
-                    <a class="discount-button">TA DEL AV DAGENS KAMPANJ <img class="btn-arrow" src="./images/arrow.png" alt="right arrow"></a>
-                </div>
-            </div>
+        </div>        
     </main>
 
-    <section id="services">
-        <div class="test-container">
-           <img src="./images/">
+    <!-- END -->
+
+    <section id="reviews">
+        <img class="review-phone-left" src="./images/667a7261a9ef862d6dcd99de.gif" alt="phone with reviews">
+
+        <div class="review-divider-outer-container">
+            <div class="review-divider-container">
+                <div class="review-block">
+                    <h2>Betyg 4.7 / 5</h2>
+                    <p>967 Omdömen</p>
+                </div>
+
+                <div class="review-block">
+                    <h2>+ 18 000</h2>
+                    <p>Nöjda Kunder</p>
+                </div>
+
+                <div class="review-block">
+                    <h2>+ 13 Års</h2>
+                    <p>Efarenhet</p>
+                </div>
+            </div>
+        </div>  
+
+        <div class="review-text-container">
+           <h2 class="main-color">VARMT VÄLKOMMEN!</h2> 
+           <p class="review-text">
+            Vi på Flyttstädning Stockholm™ hjälper dig gärna med allt
+            från att svara på frågor till att boka din flytt eller städning.
+            <br><br>
+            Vår telefonväxel är öppen alla dagar i veckan mellan 08:00 - 17:00
+            <span class="marked-text">RING: 0105855800</span>
+            <br><br>
+            Övrig tid är du välkommen att kontakta oss via vårt kontaktformulär.
+            <span class="marked-text">Vi svarar alltid på mail snarast möjligt inom 24 timmar.</span>
+            </p>
+
+            <div class="button-container">
+                <a class="contact-button"><img class="btn-arrow" src="./images/arrow.png" alt="right arrow">Kontakta Oss </a>
+            </div>
         </div>
+
+        <img class="review-phone-right" src="./images/667a741501d4bd82e3951058.gif" alt="phone with reviews">
     </section>
 
-    <section id="projects">
 
-    </section>
 
     <section id="contact">
         <div class="contact-form-container">
