--- a/checklist.html
+++ b/checklist.html
@@ -12,9 +12,10 @@
             <img id="logo" src="./images/logo.gif" alt="logo">
             <ul class="nav-links" id="nav-menu">
                 <li><a href="index.html">Hem</a></li>
-                <li><a href="prices.html">Priser/Boka Online</a></li>
+                <li><a href="booking-page.html">Priser/Boka Online</a></li>
+                <li><a href="whyus.html">Varför Välja Oss?</a></li>
                 <li><a href="checklist.html">Checklista</a></li>
-                <li><a href="#contact">Kontakta Oss</a></li>
+                <li><a href="contact.html">Kontakta Oss</a></li>
             </ul>
         </nav>
 
@@ -25,9 +26,9 @@
                 <li><a onClick="scrollToElement('checklist-bathroom')">Badrum</a></li>
                 <li><a onClick="scrollToElement('checklist-laundry')">Tvättrum</a></li>
                 <li><a onClick="scrollToElement('checklist-balcony')">Balkong/Uteplats</a></li>
-                <li><a onClick="scrollToElement('checklist-garage')">Förråd, Garage, Vind m.m.</a></li>
-                <li><a onClick="scrollToElement('checklist-freezer')">Avfrostning frys</a></li>
-                <li><a onClick="scrollToElement('checklist-stove')">Kamin/Öppen spis</a></li>
+<!--                 <li><a onClick="scrollToElement('checklist-garage')">Förråd, Garage, Vind m.m.</a></li>
+ -->                <li><a onClick="scrollToElement('checklist-freezer')">Avfrostning frys</a></li>
+                <li><a onClick="scrollToElement('checklist-stove')">Kamin</a></li>
                 <li><a onClick="scrollToElement('checklist-möbler')">Möbler</a></li>
                 <li><a onClick="scrollToElement('checklist-brunn')">Vattenlås/Golvbrunnar</a></li>
                 <li><a onClick="scrollToElement('checklist-ejstandard')">Ej Standard</a></li>
@@ -227,12 +228,43 @@
     </div>
 
     <footer>
-        <img class="logo-footer" src="./images/logo3.png" alt="logo3">
-        <p>&copy; CrispDesigns 2024. All rights reserved.</p>
-        <p><a href="#home">Hem</a> | <a href="#contact">Kontakta oss</a> | <a href="#portfolio">Portfolio</a></p>
+        <div class="footer-container centered-section">
+            <h2>Med Flyttstädning Stockholm™ är din bostad i trygga händer.</h2>
+            <!-- MAPS -->
+            <div class="map-container">
+                <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.8354345093666!2d144.95373631531697!3d-37.816279779751554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0xf5779a74ee620c1!2sMelbourne%20VIC%2C%20Australia!5e0!3m2!1sen!2sus!4v1602314217045!5m2!1sen!2sus" 
+                width="100%" 
+                height="100%" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+            </iframe>
+            </div>
+            <div class="footer-inner-container">
+                <div class="footer-text-section paragraph-2tv2o3MU1B text-output cparagraph-2tv2o3MU1B none noBorder radius0 none" data-animation-class=""><div><h2><strong><br>Flyttstädning<br>Stockholm™</strong></h2></div></div>
+
+                <div class="footer-text-section">
+                    <h3>Kontakta Oss:</h3>
+                    <p><strong>Alla dagar:</strong> 08:00 - 17:00</p>
+                    <p><strong>Ring:</strong> 0105855800</p>
+                    <p><strong>Övrig tid:</strong> kontaktformulär</p>
+                    <p>Vi svarar snarast möjligt inom 24 timmar</p>
+                </div>
+                <div class="footer-text-section">
+                    <h3>Intregritets Policy</h3>
+                    <p class="orange-color">GDPR</p>
+                    <p class="orange-color">Intregritets Policy</p>
+                    <p class="orange-color">Avtal &/ Villkor</p>
+                </div>
+                <div class="footer-text-section">
+                    <h3>Om Oss</h3>
+                    <p><strong>Vi är din pålitliga partner för professionella flytt och städtjänster.</strong></p>
+                    <p>Med huvudkontor i Stockholm sträcker våra städtjänster sig över flera orter i hela Stor-Stockholm med omnejd.</p>
+                </div>
+            </div>
+        </div>
     </footer>
-
-
 
     <script src="functions.js"></script>
 </body>
