--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
             </div>
             <ul class="nav-links" id="nav-menu">
                 <li><a href="index.html">Hem</a></li>
-                <li><a href="prices.html">Priser/Boka Online</a></li>
+                <li><a href="booking-page-2.html">Priser/Boka Online</a></li>
+                <li><a href="whyus.html">Varför Välja Oss?</a></li>
                 <li><a href="checklist.html">Checklista</a></li>
-                <li><a href="#contact">Kontakta Oss</a></li>
+                <li><a href="contact.html">Kontakta Oss</a></li>
             </ul>
         </nav>
     </header>
@@ -54,7 +55,7 @@
     <main id="home">
         <div class="big-width-section">
             <p class="big-paragraph landing-margin-left">BOKA FLYTTSTÄD IDAG!</p>
-            <h1 class="landing-margin-left-2">GRATIS FÖNSTERPUTS. + HELA 15% RABATT PÅ FLYTTSTÄDNINGEN</h1>
+            <h1 class="landing-margin-left-2">GRATIS FÖNSTERPUTS. <br> + HELA 15% RABATT <br> PÅ FLYTTSTÄDNINGEN</h1>
             <p class="small-paragraph landing-margin-left-3">Om du även bokar flytthjälp.</p>
             <div class="button-container">
                 <a class="landing-margin-left-4 discount-button">TA DEL AV DAGENS KAMPANJ <img class="btn-arrow" src="./images/arrow.png" alt="right arrow"></a>
@@ -70,7 +71,7 @@
                 <div class="blurred-background"></div>
             </div>
         </div>        
-    </main>
+    </main> 
 
     <!-- END -->
 
@@ -81,24 +82,25 @@
         <div class="review-divider-outer-container">
             <div class="review-divider-container">
                 <div class="review-block">
-                    <h2>Betyg 4.7 / 5</h2>
+                  <!--   <img class="five-stars-img" src="./images/5stars.gif" alt="5 stars"> -->
+                    <h2 id="review-h2-first"><img class="review-icon" src="./images/review.png">Betyg 4.7 / 5</h2>
                     <p>967 Omdömen</p>
                 </div>
 
                 <div class="review-block">
-                    <h2>+ 18 000</h2>
+                    <h2><img class="review-icon" src="./images/chat.png">+18 000</h2>
                     <p>Nöjda Kunder</p>
                 </div>
 
                 <div class="review-block">
-                    <h2>+ 13 Års</h2>
+                    <h2><img class="review-icon" src="./images/experience.png">+13 Års</h2>
                     <p>Efarenhet</p>
                 </div>
             </div>
         </div>  
 
         <div class="review-text-container">
-           <h2 class="main-color">VARMT VÄLKOMMEN!</h2> 
+           <h2 class="main-color review-header">VARMT VÄLKOMMEN!</h2> 
            <p class="review-text">
                 Vi på Flyttstädning Stockholm™ hjälper dig gärna med allt
                 från att svara på frågor till att boka din flytt eller städning.
@@ -247,24 +249,24 @@
             </iframe>
             </div>
             <div class="footer-inner-container">
-                <h2>FLYTTSTÄDNING PARTNER</h2>
+                <div class="footer-text-section paragraph-2tv2o3MU1B text-output cparagraph-2tv2o3MU1B none noBorder radius0 none" data-animation-class=""><div><h2><strong><br>Flyttstädning<br>Stockholm™</strong></h2></div></div>
 
                 <div class="footer-text-section">
                     <h3>Kontakta Oss:</h3>
-                    <p>Alla dagar 08:00 - 17:00</p>
-                    <p>Ring: 0105855800</p>
-                    <p>Övrig tid: kontaktformulär</p>
+                    <p><strong class="blue-color">Alla dagar:</strong> 08:00 - 17:00</p>
+                    <p><strong class="blue-color">Ring:</strong> 0105855800</p>
+                    <p><strong class="blue-color">Övrig tid:</strong> kontaktformulär</p>
                     <p>Vi svarar snarast möjligt inom 24 timmar</p>
                 </div>
                 <div class="footer-text-section">
                     <h3>Intregritets Policy</h3>
-                    <p>GDPR</p>
-                    <p>Intregritets Policy</p>
-                    <p>Övrig tid: kontaktformulär</p>
+                    <p class="blue-color">GDPR</p>
+                    <p class="blue-color">Intregritets Policy</p>
+                    <p class="blue-color">Avtal &/ Villkor</p>
                 </div>
                 <div class="footer-text-section">
                     <h3>Om Oss</h3>
-                    <p>Vi är din pålitliga partner för professionella flytt och städtjänster.</p>
+                    <p><strong class="blue-color">Vi är din pålitliga partner för professionella flytt och städtjänster.</strong></p>
                     <p>Med huvudkontor i Stockholm sträcker våra städtjänster sig över flera orter i hela Stor-Stockholm med omnejd.</p>
                 </div>
             </div>
