added lazy loading or eager to all images

--- a/checklist.html
+++ b/checklist.html
@@ -12,7 +12,7 @@
 <body class="checklist-body">
     <header>
         <nav class="navbar">
-            <a><img id="logo" src="./images/logo.gif" alt="logo"></a>
+            <img onClick="scrollToElement('nav-scroll');" id="logo" src="./images/logo.gif" alt="logo" loading="eager">
             <ul class="nav-links" id="nav-menu">
                 <li><a href="index.html">Hem</a></li>
                 <li><a href="booking-page.html">Priser/Boka Online</a></li>
