--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body class="booking-body">
     <header>
         <nav class="navbar">
-            <img onClick="scrollToElement('nav-scroll');" id="logo" src="./images/logo.gif" alt="logo">
+            <img onClick="scrollToElement('nav-scroll');" id="logo" src="./images/logo.gif" alt="logo" loading="eager">
             <div class="menu-icon" id="menu-icon">
                 <div class="line"></div>
                 <div class="line"></div>
@@ -26,14 +26,14 @@
     </header>
     <div id="nav-scroll"></div>
 
-    <img src="./images/cleaningbg3.jpg" alt="cleaning service" class="background-image">
+    <img src="./images/cleaningbg3.jpg" alt="cleaning service" class="background-image" loading="eager">
 
     <div class="contact-container">
             <div class="col col-text col-left">
             <div class="inner spacing text-align-center contact_spacing">
 
             <div class="contact-inner-container">
-                <img class="big-icon" src="./images/cleaning.png" alt="cleaning">
+                <img class="big-icon" src="./images/cleaning.png" alt="cleaning" loading="eager">
                 <h1><strong>KONTAKTA OSS</strong></h1>
                 
                 <p><strong>Telefon 08:00 - 17:00 <br>
