--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
 <body>
     <header>
         <nav id="nav" class="navbar">
-           <img onClick="scrollToElement('nav-scroll');" id="logo" src="./images/logo.gif" alt="logo">
+           <img onClick="scrollToElement('nav-scroll');" id="logo" src="./images/logo.gif" alt="logo" loading="eager">
 
             <div class="nav-info-container">
-                <div class="nav-info-block" onClick="scrollToElement('footer');">
+                <div class="nav-info-block" onClick="scrollToElement('footer');" loading="eager">
                     <img src="images/map.png" alt="map icon">
                     <span>Franzéngatan 30,<br>112 16 Stockholm</span>
                 </div>
 
-                <div class="nav-info-block" onClick="scrollToElement('footer');">
+                <div class="nav-info-block" onClick="scrollToElement('footer');" loading="eager"> 
                     <img src="images/time.png" alt="clock icon">
                     <span>Mån - Sön:<br>08:00 - 17:00</span>
                 </div>
 
                 <a href="tel:+010 58 558 08">
                     <div class="nav-info-block">
-                        <img src="images/phone-call.png" alt="phone icon">
+                        <img src="images/phone-call.png" alt="phone icon" loading="eager">
                         <span>Ring nu:<br>010 58 558 08</span>
                     </div>
                 </a>
@@ -62,14 +62,14 @@
             <p class="small-paragraph landing-margin-left-3 index-text">Om du även bokar flytthjälp.</p>
             <div class="button-container landing-margin-left-4">
                 <a href="booking-page.html" class="discount-button">
-                    <div class="btn-text white-color">SE PRISER <img class="btn-arrow-2" src="./images/arrow.png" alt="right arrow"></div>
+                    <div class="btn-text white-color">SE PRISER <img class="btn-arrow-2" src="./images/arrow.png" alt="right arrow" loading="eager"></div>
                     <div class="second-btn-text">SMIDIG ONLINEBOKNING</div>
                 </a>
             </div>
         </div>     
         
         <div class="small-width-section">
-            <img class="background-image" src="./images/bg.jpeg" alt="background-image">
+            <img class="background-image" src="./images/bg.jpeg" alt="background-image" loading="eager">
         </div>   
 
 <!--         <div class="small-width-section">
@@ -87,23 +87,23 @@
 
     <!-- REVIEW SECTION -->
     <section id="reviews">
-        <img class="review-phone-left" src="./images/667a7261a9ef862d6dcd99de.gif" alt="phone with reviews">
+        <img class="review-phone-left" src="./images/667a7261a9ef862d6dcd99de.gif" alt="phone with reviews" loading="lazy">
 
         <div class="review-divider-outer-container">
             <div class="review-divider-container">
                 <div class="review-block">
                   <!--   <img class="five-stars-img" src="./images/5stars.gif" alt="5 stars"> -->
-                    <h2 id="review-h2-first"><img class="review-icon" src="./images/rating2.png">Betyg 4.7 / 5</h2>
+                    <h2 id="review-h2-first"><img class="review-icon" src="./images/rating2.png" loading="lazy">Betyg 4.7 / 5</h2>
                     <p>967 Omdömen</p>
                 </div>
 
                 <div class="review-block">
-                    <h2><img class="review-icon" src="./images/chat.png">+18 000</h2>
+                    <h2><img class="review-icon" src="./images/chat.png" loading="lazy">+18 000</h2>
                     <p>Nöjda Kunder</p>
                 </div>
 
                 <div class="review-block">
-                    <h2><img class="review-icon" src="./images/exp.webp">+13 Års</h2>
+                    <h2><img class="review-icon" src="./images/exp.webp" loading="lazy">+13 Års</h2>
                     <p>Efarenhet</p>
                 </div>
             </div>
@@ -123,12 +123,12 @@
             </p>
 
             <div class="button-container">
-                <a href="contact.html" class="contact-button"><img class="btn-arrow" src="./images/user.png" alt="right arrow">Kontakta Oss </a>
+                <a href="contact.html" class="contact-button"><img class="btn-arrow" src="./images/user.png" alt="right arrow" loading="lazy">Kontakta Oss </a>
             </div>
         </div>
 
         <h2 class="bottom-header">Hur fungerar det?</h2>
-        <img class="review-phone-right" src="./images/667a741501d4bd82e3951058.gif" alt="phone with reviews">
+        <img class="review-phone-right" src="./images/667a741501d4bd82e3951058.gif" alt="phone with reviews" loading="lazy">
     </section>
 
 
@@ -177,7 +177,7 @@
 
         <div class="button-container section-margin">
             <a class="prices-button">
-                <div class="btn-text">SE PRISER <img class="btn-arrow-2" src="./images/arrow.png" alt="right arrow"></div>
+                <div class="btn-text">SE PRISER <img class="btn-arrow-2" src="./images/arrow.png" alt="right arrow" loading="lazy"></div>
                 <div class="second-btn-text">SMIDIG ONLINEBOKNING</div>
             </a>
         </div>
@@ -187,7 +187,7 @@
             <div class="article-content-wrapper">
                 <div>
                     <div class="article-image">
-                        <img src="./images/img2.webp" alt="Flyttstädning i Stockholm">
+                        <img src="./images/img2.webp" alt="Flyttstädning i Stockholm" loading="lazy">
                     </div>
                     <div class="article-content">
                         <h1>Stockholms bästa flyttstäd</h1>
@@ -253,7 +253,7 @@
                     </div>
                     <div class="button-container">
                         <a href="booking-page.html" class="discount-button">
-                            <div class="btn-text white-color">SE PRISER <img class="btn-arrow-2" src="./images/arrow.png" alt="right arrow"></div>
+                            <div class="btn-text white-color">SE PRISER <img class="btn-arrow-2" src="./images/arrow.png" alt="right arrow" loading="lazy"></div>
                             <div class="second-btn-text">SMIDIG ONLINEBOKNING</div>
                         </a>
                     </div>
@@ -271,7 +271,7 @@
                         <p>Detta uppnår vi genom att ha den bästa kundtjänsten, bästa städpersonalen samt pressade flytt och städpriser. Vårt miljötänk är en självklarhet, framförallt när det kommer till städningen. Kontakta oss redan idag så svarar vi på dina frågor eller hjälper dig att boka flytt och städ till ett förmånligt paketpris.</p>
                     </div>
                     <div class="article-image">
-                        <img src="./images/img1.webp" alt="Flyttstädning i Stockholm">
+                        <img src="./images/img1.webp" alt="Flyttstädning i Stockholm" loading="lazy">
                     </div>
                 </div>
           
@@ -347,7 +347,7 @@
             </div>
             <div class="footer-inner-container">
                 <div class="footer-text-section paragraph-2tv2o3MU1B text-output cparagraph-2tv2o3MU1B none noBorder radius0 none" data-animation-class="">
-                    <img class="footer-logo" src="./images/logo_mail.jpg" height="95" width="95" alt="logo">
+                    <img class="footer-logo" src="./images/logo_mail.jpg" height="95" width="95" alt="logo" loading="lazy">
                     <h2><strong>Flyttstädning<br>Stockholm™</strong></h2>
                 </div>
 
