--- a/booking-page.html
+++ b/booking-page.html
@@ -14,21 +14,21 @@
         <nav class="navbar" id="nav">
 
             <div class="nav-info-container centered">
-                <a href="index.html" class="nav-logo-link"><img id="logo" src="./images/logo.gif" alt="logo"></a>
+                <a href="index.html" class="nav-logo-link"><img id="logo" src="./images/logo.gif" alt="logo" loading="eager"></a>
 
                 <div class="nav-info-block" onClick="scrollToElement('footer');">
-                    <img src="images/map.png" alt="map icon">
+                    <img src="images/map.png" alt="map icon" loading="eager">
                     <span>Franzéngatan 30,<br>112 16 Stockholm</span>
                 </div>
 
                 <div class="nav-info-block" onClick="scrollToElement('footer');">
-                    <img src="images/time.png" alt="clock icon">
+                    <img src="images/time.png" alt="clock icon" loading="eager">
                     <span>Mån - Sön:<br>08:00 - 17:00</span>
                 </div>
 
                 <a href="tel:+010 58 558 08">
                     <div class="nav-info-block">
-                        <img src="images/phone-call.png" alt="phone icon">
+                        <img src="images/phone-call.png" alt="phone icon" loading="eager">
                         <span>Ring nu:<br>010 58 558 08</span>
                     </div>
                 </a>
@@ -50,7 +50,7 @@
     </header>
 
     <div id="nav-scroll"></div>
-    <img src="./images/cleaningbg3.jpg" alt="cleaning service" class="background-image">
+    <img src="./images/cleaningbg3.jpg" alt="cleaning service" class="background-image" loading="eager">
 
     <div class="booking-container">
         <div class="contact-inner-container">
