--- a/whyus.html
+++ b/whyus.html
@@ -20,9 +20,9 @@
             </div>
             <ul class="nav-links" id="nav-menu">
                 <li><a href="index.html">Hem</a></li>
-                <li><a href="booking-page.html">Priser/Boka Online</a></li>
+                <li><a href="booking-page.html">Priser / Boka Online</a></li>
                 <li><a href="whyus.html">Varför Välja Oss?</a></li>
-                <li><a href="checklist.html">Checklista</a></li>
+                <li><a onClick="redirectToIndex('footer');">Checklista</a></li>
                 <li><a href="contact.html">Kontakta Oss</a></li>
             </ul>
         </nav>
@@ -108,9 +108,9 @@
                 </div>
                 <div class="footer-text-section">
                     <h3>Intregritets Policy</h3>
-                    <p class="blue-color">GDPR</p>
-                    <p class="blue-color">Intregritets Policy</p>
-                    <p class="blue-color">Avtal &/ Villkor</p>
+                    <a href=""><p class="blue-color">GDPR</p></a>
+                    <a href=""><p class="blue-color">Intregritets Policy</p></a>
+                    <a href=""><p class="blue-color">Avtal &/ Villkor</p></a>
                 </div>
                 <div class="footer-text-section">
                     <h3>Om Oss</h3>
